Se corrije visualización de imagenes.-

--- a/pages/scotty.html
+++ b/pages/scotty.html
@@ -29,7 +29,7 @@
         </nav>
     </header>
     <div class="scottyImages">
-        <img src="/images/scotty1.jpg" alt="First Picture of Scotty">
+        <img src="../images/scotty1.jpg" alt="First Picture of Scotty">
     </div>
     <div class="scottyText m-5 fst-italic">
         <p>
@@ -46,7 +46,7 @@
         </p>
     </div>
     <div class="scottyImages">
-        <img src="/images/scotty2.jpg" alt="Second Picture of Scotty">
+        <img src="../images/scotty2.jpg" alt="Second Picture of Scotty">
     </div>
     <footer>
         <a href="#top">Go To Top</a>
