Trying to fix images....

--- a/pages/about.html
+++ b/pages/about.html
@@ -34,7 +34,7 @@
         </p>
     </h2>
     <div>
-        <img src="../images/banner.jpg" class="img-fluid rounded mx-auto d-block" alt="Scotty Banner">
+        <img src="./images/banner.jpg" class="img-fluid rounded mx-auto d-block" alt="Scotty Banner">
     </div>
     <div class="aboutText  p-3">
         <p>
@@ -44,7 +44,7 @@
         </p>
     </div>
     <div>
-        <img src="../images/scotty3.jpg" class="img-fluid rounded mx-auto d-block" alt="Picture of Scotty">
+        <img src="/absolutelyUnderstandGuitar/images/scotty3.jpg" class="img-fluid rounded mx-auto d-block" alt="Picture of Scotty">
     </div>
 
     <footer>
