Finally fixed images?

--- a/pages/about.html
+++ b/pages/about.html
@@ -34,7 +34,7 @@
         </p>
     </h2>
     <div>
-        <img src="./images/banner.jpg" class="img-fluid rounded mx-auto d-block" alt="Scotty Banner">
+        <img src="/absolutelyUnderstandGuitar/images/banner.jpg" class="img-fluid rounded mx-auto d-block" alt="Scotty Banner">
     </div>
     <div class="aboutText  p-3">
         <p>
