--- a/pages/program.html
+++ b/pages/program.html
@@ -29,7 +29,7 @@
         </nav>
     </header>
     <div class="programImage">
-        <img src="./images/program.jpg" alt="Program Image">
+        <img src="/absolutelyUnderstandGuitar/images/program.jpg" alt="Program Image">
     </div>
     <div class="programText p-3">
         <p>
