--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Absolutely Understand Guitar is a program created by Scotty West and aimed at guitar players and musicians of all levels who wish to expand their knowledge and abilities of music theory and guitar playing. This is a fan made page of the project.">
+    <meta name="keywords" content="Absolutely, Understand, Guitar, Playing, Scotty West, Music">
     <title>Absolutely Understand Guitar</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./style/style.css">
@@ -12,52 +14,63 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="container">
-    <header class="encabezado">
-        <img class="headerImage" src="https://www.absolutelyunderstandguitar.com/templates/aug_dual_sidebar_2016_v3/images/header.png" alt="headerImage">
+<div class="indexGrid">
+    <header class="header">
+        <div class="headerImage">
+            <img src="https://www.absolutelyunderstandguitar.com/templates/aug_dual_sidebar_2016_v3/images/header.png" alt="headerImage">
+        </div>        
         <h1 class="display-2">Absolutely Understand Guitar</h1>
         <h2 class="display-6 text-light text-center"><em>A Fan Tribute Page</em></h2>
-        <nav class="navbar gap-5">
-            <div class="container-fluid">
-                <ul class="w-100 flex-row navbar-nav d-flex justify-content-center gap-5 p-2 m-2">
-                    <li class="nav-item"><a href="#">Home</a></li>
-                    <li class="nav-item"><a href="./pages/about.html">About</a></li>
-                    <li class="nav-item"><a href="./pages/videos.html">Videos</a></li>
-                    <li class="nav-item"><a href="./pages/program.html">Program</a></li>
-                    <li class="nav-item"><a href="./pages/scotty.html">About Scotty</a></li>
-                </ul>
-            </div>
-        </nav>
+        <div class="naviBar">
+            <nav class="navbar navbar-expand-lg">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarContent"">
+                    <div class="container-fluid">
+                        <div class="navbar-nav d-flex flex-row justify-content-center gap-5 p-2 m-2">
+                            <a class="nav-item nav-link" href="#">Home</a>
+                            <a class="nav-item nav-link" href="./pages/about.html">About</a>
+                            <a class="nav-item nav-link" href="./pages/videos.html">Videos</a>
+                            <a class="nav-item nav-link" href="./pages/program.html">Program</a>
+                            <a class="nav-item nav-link" href="./pages/scotty.html">About Scotty</a>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </div>
     </header>
-    <div class="imagen container-fluid">
-        <img class="scottyImg" src="./images/ScottyWest.png" alt="ScottyWest">
+    <div class="indexImagen container-fluid">
+        <img class="scottyImg img-fluid" src="./images/ScottyWest.png" alt="ScottyWest">
+    </div>    
+    <div class="titleContainer container-fluid">
+        <p class="titulo fw-bold">WELCOME TO THE BEST GUITAR LESSONS PROGRAM!</p>
     </div>
-    <div class="text container-fluid">
-        <div class="titleContainer container-fluid">
-            <p class="h5 text-left text-danger">WELCOME TO THE BEST GUITAR LESSONS PROGRAM!</p>
-        </div>
+    <div class="texto1 container-fluid">
         <div class="textContainer container-fluid">
-            <p class="mainText text-light">
-                "GREETINGS FELLOW GUITAR ENTHUSIASTS. I'M SCOTTY WEST. THANKS FOR YOUR INTEREST IN OUR VIDEO GUITAR LESSONS. THESE 32 HOUR-LONG GUITAR INSTRUCTION VIDEOS CONTAIN ALL YOU NEED TO KNOW TO TRULY UNDERSTAND YOUR INSTRUMENT AND HOW IT RELATES TO ALL STYLES OF POPULAR MUSIC."
+            <p class="texto1text text-light">
+                "Greetings, fellow guitar enthusiasts! I'm Scotty West. Thanks for your interest in our lessons. These 32 hour-long instruction videos contain all you need to know to truly understand your instrument from the inside-out."
             </p>
-            <p class="mainText text-light">
-                Today, there is a positively dizzying selection of guitar lessons available online, in books and on video. If you're having trouble making sense of it all, then look no further. Our guitar lessons have been carefully crafted to ensure that you will finally get <span class="text-warning fw-bold">"The BIG Picture"</span>. Join thousands of satisfied students worldwide and become the guitar player you always wanted to be.
-            </p>
-            <p class="mainText text-light">
-                There are thousands of guitar lessons out there that will show you how to place your fingers to play specific songs. You may find this fun for awhile but it's not likely to keep you satisfied for the long haul. My <span class="fw-bold">"music as language"</span> approach to guitar lessons will allow you to easily answer questions many of you have had for years and get you on the true path to creative fulfillment.
-            </p>
-            <p class="mainText text-light">
-                Some guitar lessons have you jumping around sampling this-and-that so you end up with a scattered vision of how music works. Our video guitar lessons are different. They're designed to be viewed in order so each concept flows into the next. You could learn how to play guitar as well as or even better than your favorite guitar heroes. You'll finally be able to actually "think" on your instrument ... learn songs by ear ... write your own music ... solo with power and passion. It's easy if you get it explained to you in the right way.
-            </p>
-            <p class="mainText text-light">
-                These guitar lesson videos provide a solid foundation in music theory, ear training and guitar technique all totally integrated and profoundly well organized. 
-            </p>
-            <p class="mainText text-light">    
-                <span class="text-warning fw-bold">WATCH THE FREE VIDEO GUITAR LESSONS HERE. YOU'LL BE AMAZED AT HOW MUCH YOU WILL LEARN!</span>
-
-                You can reach Scotty's main webpage at: <a href="https://www.absolutelyunderstandguitar.com">https://www.absolutelyunderstandguitar.com</a>.
+            <p class="texto1text text-light">
+                <span class="fw-bold">Today, there is a dizzying selection of guitar lessons available online, in books and on video</span>. If you're having trouble making sense of it all, then look no further. Our guitar lessons have been carefully crafted to ensure that you will finally get <span class="text-warning fw-bold">"The BIG Picture"</span>. Join thousands of satisfied students worldwide and become the guitar player you always wanted to be.
             </p>
         </div>
+    </div>
+    <div class="texto2 container-fluid">
+        <p class="texto2text text-light">
+            There are thousands of guitar lessons out there that will show you how to place your fingers to play specific songs. You may find this fun for awhile but it's not likely to keep you satisfied for the long haul. My <span class="fw-bold">"music as language"</span> approach to guitar lessons will allow you to easily answer questions many of you have had for years and get you on the true path to creative fulfillment.
+        </p>
+        <p class="texto2text text-light">
+            Some guitar lessons have you jumping around sampling this-and-that so you end up with a scattered vision of how music works. Our video guitar lessons are different. They're designed to be viewed in order so each concept flows into the next. You could learn how to play guitar as well as or even better than your favorite guitar heroes. You'll finally be able to actually "think" on your instrument ... learn songs by ear ... write your own music ... solo with power and passion. It's easy if you get it explained to you in the right way.
+        </p>
+        <p class="texto2text text-light">
+            These guitar lesson videos provide a solid foundation in music theory, ear training and guitar technique all totally integrated and profoundly well organized. 
+        </p>
+        <p class="texto2text text-light">    
+            <span class="text-warning fw-bold">WATCH THE FREE VIDEO GUITAR LESSONS HERE. YOU'LL BE AMAZED AT HOW MUCH YOU WILL LEARN!</span>
+
+            You can reach Scotty's main webpage at: <a href="https://www.absolutelyunderstandguitar.com">https://www.absolutelyunderstandguitar.com</a>.
+        </p>
     </div>
     <footer class="footer container-fluid">
         <a href="#top">Go To Top</a>
