--- a/pages/program.html
+++ b/pages/program.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Absolutely Understand Guitar is a program created by Scotty West and aimed at guitar players and musicians of all levels who wish to expand their knowledge and abilities of music theory and guitar playing. This is a fan made page of the project. We are in the program description subpage.">
+    <meta name="keywords" content="Absolutely, Understand, Guitar, Playing, Scotty West, Music">
     <title>Absolutely Understand Guitar</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/style.css">
@@ -13,20 +15,29 @@
 </head>
 <body>
     <header class="encabezado">
-        <img class="headerImage" src="https://www.absolutelyunderstandguitar.com/templates/aug_dual_sidebar_2016_v3/images/header.png" alt="headerImage">
+        <div class="headerImage">
+            <img src="https://www.absolutelyunderstandguitar.com/templates/aug_dual_sidebar_2016_v3/images/header.png" alt="headerImage">
+        </div>
         <h1 class="display-2">Absolutely Understand Guitar</h1>
         <h2 class="display-6 text-light text-center"><em>A Fan Tribute Page</em></h2>
-        <nav class="navbar gap-5">
-            <div class="container-fluid">
-                <ul class="w-100 flex-row navbar-nav d-flex justify-content-center gap-5 p-2 m-2">
-                    <li class="nav-item"><a href="../index.html">Home</a></li>
-                    <li class="nav-item"><a href="about.html">About</a></li>
-                    <li class="nav-item"><a href="videos.html">Videos</a></li>
-                    <li class="nav-item"><a href="program.html">Program</a></li>
-                    <li class="nav-item"><a href="scotty.html">About Scotty</a></li>
-                </ul>
-            </div>
-        </nav>
+        <div class="naviBar">
+            <nav class="navbar navbar-expand-lg">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarContent"">
+                    <div class="container-fluid">
+                        <div class="navbar-nav d-flex flex-row justify-content-center gap-5 p-2 m-2">
+                            <a class="nav-item nav-link" href="../index.html">Home</a>
+                            <a class="nav-item nav-link" href="about.html">About</a>
+                            <a class="nav-item nav-link" href="videos.html">Videos</a>
+                            <a class="nav-item nav-link" href="program.html">Program</a>
+                            <a class="nav-item nav-link" href="scotty.html">About Scotty</a>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </div>
     </header>
     <div class="programImage">
         <img src="/absolutelyUnderstandGuitar/images/program.jpg" alt="Program Image">
@@ -38,7 +49,36 @@
         <p>
             The official course handbook complements and reenforces the video guitar lessons making memorization and review of material a snap. All the guitar finger charts and graphics that Scotty shows you in the DVD guitar lessons are reprinted in your book so you can study them up close while viewing the video guitar lessons on your TV or PC. Created by a professional graphic artist, these charts and illustrations are simple to read and understand. Scotty can make even the most complex music theory easy to comprehend. The information is presented in logical order so that each lesson flows into the next. This allows folks to truly understand the interconnections between scales and modes ... melody and improvisation ... chords and progressions and how it all works together to make up the tunes we like to play. Supporting text helps lock the material in your mind making it easy to memorize.
         </p>
+        <p>
+            This program will be focusing on the <span class="text-warning">6 Main Areas of Music</span>: Pitch, Rhythm, Timbre, Dynamics, Technique, and Notation. If you aspire to be a true musician and satisfy yourself with your playing, you need to master all the 6 areas! Here is a chart further explaining the concepts:
+        </p>
     </div>
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">First</th>
+                <th scope="col">Last</th>
+            </tr>
+        </thead>       
+        <tbody>
+            <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>                
+            </tr>
+            <tr>
+                <th scope="row">2</th>
+                <td>Jacob</td>
+                <td>Thornton</td>
+            </tr>
+            <tr>
+                <th scope="row">3</th>
+                <td colspan="1">Larry the Bird</td>
+                <td>@twitter</td>
+            </tr>
+        </tbody>        
+    </table>
     <footer>
         <a href="#top">Go To Top</a>
     </footer>
