--- a/pages/videos.html
+++ b/pages/videos.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Absolutely Understand Guitar is a program created by Scotty West and aimed at guitar players and musicians of all levels who wish to expand their knowledge and abilities of music theory and guitar playing. This is a fan made page of the project. Here are some videos of Scotty and his teaching.">
+    <meta name="keywords" content="Absolutely, Understand, Guitar, Playing, Scotty West, Music">
     <title>Absolutely Understand Guitar</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/style.css">
@@ -13,20 +15,29 @@
 </head>
 <body>
     <header class="encabezado">
-        <img class="headerImage" src="https://www.absolutelyunderstandguitar.com/templates/aug_dual_sidebar_2016_v3/images/header.png" alt="headerImage">
+        <div class="headerImage">
+            <img src="https://www.absolutelyunderstandguitar.com/templates/aug_dual_sidebar_2016_v3/images/header.png" alt="headerImage">
+        </div>
         <h1 class="display-2">Absolutely Understand Guitar</h1>
         <h2 class="display-6 text-light text-center"><em>A Fan Tribute Page</em></h2>
-        <nav class="navbar gap-5">
-            <div class="container-fluid">
-                <ul class="w-100 flex-row navbar-nav d-flex justify-content-center gap-5 p-2 m-2">
-                    <li class="nav-item"><a href="../index.html">Home</a></li>
-                    <li class="nav-item"><a href="about.html">About</a></li>
-                    <li class="nav-item"><a href="videos.html">Videos</a></li>
-                    <li class="nav-item"><a href="program.html">Program</a></li>
-                    <li class="nav-item"><a href="scotty.html">About Scotty</a></li>
-                </ul>
-            </div>
-        </nav>
+        <div class="naviBar">
+            <nav class="navbar navbar-expand-lg">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarContent"">
+                    <div class="container-fluid">
+                        <div class="navbar-nav d-flex flex-row justify-content-center gap-5 p-2 m-2">
+                            <a class="nav-item nav-link" href="../index.html">Home</a>
+                            <a class="nav-item nav-link" href="about.html">About</a>
+                            <a class="nav-item nav-link" href="videos.html">Videos</a>
+                            <a class="nav-item nav-link" href="program.html">Program</a>                            
+                            <a class="nav-item nav-link" href="scotty.html">About Scotty</a>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </div>
     </header>
     <div class="videosText">
         <p class="h2 text-warning fw-bold">
@@ -54,6 +65,20 @@
             frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
             allowfullscreen>
+        </iframe>
+    </div>
+    <div class="videosText">
+        <p class="h2 text-warning">
+            Some of Scotty's playing with The Experimental Ensemble of Cape Cod 
+        </p>
+    </div>
+    <div class="videos">
+        <iframe width="560" height="315" 
+                src="https://www.youtube.com/embed/sbQEQHQ5HX4?si=xyl2xAsaOxEAunVO" 
+                title="YouTube video player" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                allowfullscreen>
         </iframe>
     </div>
     <footer>
