--- a/pages/about.html
+++ b/pages/about.html
@@ -38,26 +38,29 @@
             </nav>
         </div>        
     </header>
-    <h2 class="aboutHeader text-warning text-center">
+    <h2 class="titulo text-warning text-center">
         <p>
-            The Most Comprehensive and Well Organized Guitar Instruction Program Available Anywhere
+            The Most Comprehensive and Well Organized <br> Guitar Instruction Program Available Anywhere
         </p>
-    </h2>
-    <div>
+    </h2>    
+    <div class="foto1">
         <img src="/absolutelyUnderstandGuitar/images/banner.jpg" class="img-fluid rounded mx-auto d-block" alt="Scotty Banner">
     </div>
-    <div class="aboutText  p-3">
+    <div class="texto1">
         <p>
             Look at all you get with our <span class="text-warning fw-bold">video guitar instruction package</span>!
             Scotty's guitar instruction videos teach you to actually "think" on your guitar. If a picture is worth a thousand words, these 32-1 hour-long guitar instruction videos are absolutely priceless! Close-ups of guitar chord and scale finger positions, multiple camera angles and large, easy-to-read graphics make Scotty's visual method of guitar instruction unbeatable.
+        </p>
+    </div>
+    <div class="texto2">
+        <p>
             Scotty's <span class="fw-bold">"music as language"</span> approach to guitar instruction is the key. You understand guitar better when Scotty shows you how to do it and then explains how it all works right there on your screen! It's like having world class private guitar instruction right in your own home.
         </p>
     </div>
-    <div>
+    <div class="foto2">        
         <img src="/absolutelyUnderstandGuitar/images/scotty3.jpg" class="img-fluid rounded mx-auto d-block" alt="Picture of Scotty">
     </div>
-
-    <footer>
+    <footer class="footer">
         <a href="#top">Go To Top</a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
