--- a/pages/program.html
+++ b/pages/program.html
@@ -44,44 +44,55 @@
     </div>
     <div class="programText p-3">
         <p>
-            Scotty's famous <span class="text-warning">color-coded guitar scale and chord fingering charts</span> are much better than those old black and white finger charts. They tell you much more than just where to position your fingers. They show you how each note functions in the scale or chord it is in, and how it works with other scales and chords in a song. This is critical for lead guitarists and folks interested in song writing and improvising. As you learn these new finger patterns, your ear training and guitar music theory knowledge expands as well. Most every guitar chord, scale, mode and arpeggio pattern known to man is featured in this simple, well organized resource ... and it's all integrated with the official course handbook and the DVD guitar lessons themselves.
+            Scotty's famous <span class="text-warning">color-coded guitar scale and chord fingering charts</span> are much better than those old black and white finger charts. They tell you much more than just where to position your fingers. They show you how each note functions in the scale or chord it is in, and how it works with other scales and chords in a song. This is critical for lead guitarists and folks interested in song writing and improvising.
         </p>
         <p>
-            The official course handbook complements and reenforces the video guitar lessons making memorization and review of material a snap. All the guitar finger charts and graphics that Scotty shows you in the DVD guitar lessons are reprinted in your book so you can study them up close while viewing the video guitar lessons on your TV or PC. Created by a professional graphic artist, these charts and illustrations are simple to read and understand. Scotty can make even the most complex music theory easy to comprehend. The information is presented in logical order so that each lesson flows into the next. This allows folks to truly understand the interconnections between scales and modes ... melody and improvisation ... chords and progressions and how it all works together to make up the tunes we like to play. Supporting text helps lock the material in your mind making it easy to memorize.
+            The official course handbook complements and reenforces the video guitar lessons making memorization and review of material a snap. All the guitar finger charts and graphics that Scotty shows you in the DVD guitar lessons are reprinted in your book so you can study them up close while viewing the video guitar lessons on your TV or PC. Created by a professional graphic artist, these charts and illustrations are simple to read and understand.
         </p>
         <p>
             This program will be focusing on the <span class="text-warning">6 Main Areas of Music</span>: Pitch, Rhythm, Timbre, Dynamics, Technique, and Notation. If you aspire to be a true musician and satisfy yourself with your playing, you need to master all the 6 areas! Here is a chart further explaining the concepts:
         </p>
     </div>
-    <table class="table">
-        <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">First</th>
-                <th scope="col">Last</th>
-            </tr>
-        </thead>       
+    <table class="table table-striped table-dark custom-table caption-top">
+        <caption class="text-light">6 Main Areas of Music</caption>
         <tbody>
             <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>                
+                <th scope="row">Pitch</th>
+                <td>Notes, Scales, Patterns...</td>
+                <td>"Did I play the right notes?"</td>                
             </tr>
             <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
+                <th scope="row">Rhythm</th>
+                <td>Beat, Tempo, Pulse...</td>
+                <td>"Did I keep up with the beat?"</td>
             </tr>
             <tr>
-                <th scope="row">3</th>
-                <td colspan="1">Larry the Bird</td>
-                <td>@twitter</td>
+                <th scope="row">Timbre</th>
+                <td colspan="1">Tone, Sound Quality...</td>
+                <td>"How did I sound?"</td>
+            </tr>
+            <tr>
+                <th scope="row">Dynamics</th>
+                <td colspan="1">Volume, Amplitude, Loudness...</td>
+                <td>"Did I play at the right volume?"</td>
+            </tr>
+            <tr>
+                <th scope="row">Technique</th>
+                <td colspan="1">Finger Movement, Physical Style...</td>
+                <td>"Did I cooperate with the guitar?"</td>
+            </tr>
+            <tr>
+                <th scope="row">Notation</th>
+                <td colspan="1">Reading written music</td>
+                <td>"How is my reading coming along?"</td>
             </tr>
         </tbody>        
     </table>
-    <footer>
-        <a href="#top">Go To Top</a>
-    </footer>
+    <div class="footer">
+        <footer>
+            <a href="#top">Go To Top</a>
+        </footer>
+    </div>    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
