--- a/pages/videos.html
+++ b/pages/videos.html
@@ -39,12 +39,12 @@
             </nav>
         </div>
     </header>
-    <div class="videosText">
+    <div class="videoT1">
         <p class="h2 text-warning fw-bold">
             The Absolutely Understand Guitar Video Series
         </p>
     </div>
-    <div class="videos">
+    <div class="video1">
         <iframe width="560" height="315" 
             src="https://www.youtube.com/embed/Gg1L-sBIxnY?si=WuWY-ICSXA8TsnHe" 
             title="YouTube video player" 
@@ -53,12 +53,12 @@
             allowfullscreen>
         </iframe>
     </div>
-    <div class="videosText">
+    <div class="videoT2">
         <p class="h2 text-warning">
             The Ear Training Series
         </p>
     </div>
-    <div class="videos">
+    <div class="video2">
         <iframe width="560" height="315" 
             src="https://www.youtube.com/embed/erelNRRYXUA?si=_ry3L4LYculn0AaP" 
             title="YouTube video player" 
@@ -67,12 +67,12 @@
             allowfullscreen>
         </iframe>
     </div>
-    <div class="videosText">
+    <div class="videoT3">
         <p class="h2 text-warning">
-            Some of Scotty's playing with The Experimental Ensemble of Cape Cod 
+            Some of Scotty's playing with <span class="fst-italic">The Experimental Ensemble of Cape Cod</span>! 
         </p>
     </div>
-    <div class="videos">
+    <div class="video3">
         <iframe width="560" height="315" 
                 src="https://www.youtube.com/embed/sbQEQHQ5HX4?si=xyl2xAsaOxEAunVO" 
                 title="YouTube video player" 
@@ -81,7 +81,7 @@
                 allowfullscreen>
         </iframe>
     </div>
-    <footer>
+    <footer class="footer">
         <a href="#top">Go To Top</a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
