Updated Index & Sass.-

--- a/index.html
+++ b/index.html
@@ -14,65 +14,65 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="gridParent">
-    <div class="indexGrid">
-        <header class="header">
-            <div class="headerImage">
-                <img src="https://www.absolutelyunderstandguitar.com/templates/aug_dual_sidebar_2016_v3/images/header.png" alt="headerImage">
-            </div>        
-            <h1 class="display-2">Absolutely Understand Guitar</h1>
-            <h2 class="display-6 text-light text-center"><em>A Fan Tribute Page</em></h2>
-            <div class="naviBar">
-                <nav class="navbar navbar-expand-lg">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarContent"">
-                        <div class="container-fluid">
-                            <div class="navbar-nav d-flex flex-row justify-content-center gap-5 p-2 m-2">
-                                <a class="nav-item nav-link" href="#">Home</a>
-                                <a class="nav-item nav-link" href="./pages/about.html">About</a>
-                                <a class="nav-item nav-link" href="./pages/videos.html">Videos</a>
-                                <a class="nav-item nav-link" href="./pages/program.html">Program</a>
-                                <a class="nav-item nav-link" href="./pages/scotty.html">About Scotty</a>
-                            </div>
+<div class="indexGrid">
+    <header class="header">
+        <div class="headerImage">
+            <img src="https://www.absolutelyunderstandguitar.com/templates/aug_dual_sidebar_2016_v3/images/header.png" alt="headerImage">
+        </div>        
+        <h1>Absolutely Understand Guitar</h1>
+        <h2>A Fan Tribute Page</h2>
+        <div class="naviBar">
+            <nav class="navbar navbar-expand-lg">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarContent">
+                    <div class="container-fluid">
+                        <div class="navbar-nav d-flex flex-row justify-content-center gap-5 p-2 m-2">
+                            <a class="nav-item nav-link" href="#">Home</a>
+                            <a class="nav-item nav-link" href="./pages/about.html">About</a>
+                            <a class="nav-item nav-link" href="./pages/videos.html">Videos</a>
+                            <a class="nav-item nav-link" href="./pages/program.html">Program</a>
+                            <a class="nav-item nav-link" href="./pages/scotty.html">About Scotty</a>
                         </div>
                     </div>
-                </nav>
-            </div>
-        </header>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <div class="mainGrid">
         <div class="indexImagen container-fluid">
-            <img class="scottyImg img-fluid" src="./images/ScottyWest.png" alt="ScottyWest">
+            <img class="scottyImg img-fluid" src="../images/ScottyWest.png" alt="ScottyWest">
         </div>    
         <div class="titleContainer container-fluid">
-            <p class="titulo fw-bold">WELCOME TO THE BEST GUITAR LESSONS PROGRAM!</p>
+            <p class="title">WELCOME TO THE BEST GUITAR LESSONS PROGRAM!</p>
         </div>
         <div class="texto1 container-fluid">
             <div class="textContainer container-fluid">
-                <p class="texto1text text-light">
+                <p>
                     "Greetings, fellow guitar enthusiasts! I'm Scotty West. Thanks for your interest in our lessons. These 32 hour-long instruction videos contain all you need to know to truly understand your instrument from the inside-out."
                 </p>
-                <p class="texto1text text-light">
+                <p>
                     <span class="fw-bold">Today, there is a dizzying selection of guitar lessons available online, in books and on video</span>. If you're having trouble making sense of it all, then look no further. Our guitar lessons have been carefully crafted to ensure that you will finally get <span class="text-warning fw-bold">"The BIG Picture"</span>. Join thousands of satisfied students worldwide and become the guitar player you always wanted to be.
                 </p>
             </div>
         </div>
-        <div class="texto2 container-fluid">
-            <p class="texto2text text-light">
-                There are thousands of guitar lessons out there that will show you how to place your fingers to play specific songs. You may find this fun for awhile but it's not likely to keep you satisfied for the long haul. My <span class="fw-bold">"music as language"</span> approach to guitar lessons will allow you to easily answer questions many of you have had for years and get you on the true path to creative fulfillment.
-            </p>
-            <p class="texto2text text-light">
-                Some guitar lessons have you jumping around sampling this-and-that so you end up with a scattered vision of how music works. Our video guitar lessons are different. They're designed to be viewed in order so each concept flows into the next. You could learn how to play guitar as well as or even better than your favorite guitar heroes. You'll finally be able to actually "think" on your instrument ... learn songs by ear ... write your own music ... solo with power and passion. It's easy if you get it explained to you in the right way.
-            </p>
-            <p class="texto2text text-light">
-                These guitar lesson videos provide a solid foundation in music theory, ear training and guitar technique all totally integrated and profoundly well organized. 
-            </p>
-            <p class="texto2text text-light">    
-                <span class="text-warning fw-bold">WATCH THE FREE VIDEO GUITAR LESSONS HERE. YOU'LL BE AMAZED AT HOW MUCH YOU WILL LEARN!</span>
+    </div>
+    <div class="texto2 container-fluid">
+        <p>
+            There are thousands of guitar lessons out there that will show you how to place your fingers to play specific songs. You may find this fun for awhile but it's not likely to keep you satisfied for the long haul. My <span class="fw-bold">"music as language"</span> approach to guitar lessons will allow you to easily answer questions many of you have had for years and get you on the true path to creative fulfillment.
+        </p>
+        <p>
+            Some guitar lessons have you jumping around sampling this-and-that so you end up with a scattered vision of how music works. Our video guitar lessons are different. They're designed to be viewed in order so each concept flows into the next. You could learn how to play guitar as well as or even better than your favorite guitar heroes. You'll finally be able to actually "think" on your instrument ... learn songs by ear ... write your own music ... solo with power and passion. It's easy if you get it explained to you in the right way.
+        </p>
+        <p>
+            These guitar lesson videos provide a solid foundation in music theory, ear training and guitar technique all totally integrated and profoundly well organized. 
+        </p>
+        <p>    
+            <span class="text-warning fw-bold">WATCH SCOTTY'S FREE VIDEO GUITAR LESSONS - YOU'LL BE AMAZED AT HOW MUCH YOU WILL LEARN!</span>
 
-                You can reach Scotty's main webpage at: <a href="https://www.absolutelyunderstandguitar.com">https://www.absolutelyunderstandguitar.com</a>.
-            </p>
-        </div>
+            You can reach Scotty's main webpage at: <a href="https://www.absolutelyunderstandguitar.com">https://www.absolutelyunderstandguitar.com</a>.
+        </p>
     </div>
 <footer class="footer">
     <a href="#top">Go To Top</a>
