--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <link rel="stylesheet" href="./style/style.css">
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <base href="/absolutelyUnderstandGuitar/">
 </head>
 <body>
 <div class="indexGrid">
@@ -80,9 +81,9 @@
         </p>
     </div>
     <hr class="hr3">
-<footer class="footer">
-    <a href="#top">Go To Top</a>
-</footer>
+    <footer class="footer">
+        <a href="#top">Go To Top</a>
+    </footer>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
