--- a/pages/about.html
+++ b/pages/about.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <base href="/absolutelyUnderstandGuitar/">
 </head>
 <body>
 <div class="aboutGrid">
@@ -48,7 +49,7 @@
     </h2>
     <hr class="hr2">
     <div class="aboutFoto1" data-aos="zoom-in">
-        <img src="/absolutelyUnderstandGuitar/images/banner.jpg" class="img-fluid rounded mx-auto d-block" alt="Scotty Banner">
+        <img src="../images/banner.jpg" class="img-fluid rounded mx-auto d-block" alt="Scotty Banner">
     </div>
     <hr class="hr3">
     <div class="aboutTexto1" data-aos="fade-up">
@@ -65,7 +66,7 @@
     </div>
     <hr class="hr5">
     <div class="aboutFoto2" data-aos="zoom-in">
-        <img src="/absolutelyUnderstandGuitar/images/scotty3.jpg" class="img-fluid rounded mx-auto d-block" alt="Picture of Scotty">
+        <img src="../images/scotty3.jpg" class="img-fluid rounded mx-auto d-block" alt="Picture of Scotty">
     </div>
     <hr class="hr6">
     <footer class="footer">
