--- a/pages/program.html
+++ b/pages/program.html
@@ -13,14 +13,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <base href="/absolutelyUnderstandGuitar/">
 </head>
 <body>
     <header class="encabezado">
         <div class="headerImage">
             <img src="https://www.absolutelyunderstandguitar.com/templates/aug_dual_sidebar_2016_v3/images/header.png" alt="headerImage">
         </div>
-        <h1 class="display-2">Absolutely Understand Guitar</h1>
-        <h2 class="display-6 text-light text-center"><em>A Fan Tribute Page</em></h2>
+        <h1>Absolutely Understand Guitar</h1>
+        <h2>A Fan Tribute Page</h2>
         <div class="naviBar">
             <nav class="navbar navbar-expand-lg">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,7 +42,7 @@
         </div>
     </header>
     <div class="programImage">
-        <img src="/absolutelyUnderstandGuitar/images/program.jpg" alt="Program Image">
+        <img src="../images/program.jpg" alt="Program Image">
     </div>
     <div class="programText p-3">
         <p>
