--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Absolutely Understand Guitar is a program created by Scotty West and aimed at guitar players and musicians of all levels who wish to expand their knowledge and abilities of music theory and guitar playing. This is a fan made page of the project.">
     <meta name="keywords" content="Absolutely, Understand, Guitar, Playing, Scotty West, Music">
-    <title>Absolutely Understand Guitar</title>
+    <title>Home - Absolutely Understand Guitar</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
@@ -13,7 +13,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <base href="/absolutelyUnderstandGuitar/">
 </head>
 <body>
 <div class="indexGrid">
@@ -31,11 +30,11 @@
                 <div class="collapse navbar-collapse" id="navbarContent">
                     <div class="container-fluid">
                         <div class="navbar-nav d-flex flex-row justify-content-center gap-5 p-2 m-2">
-                            <a class="nav-item nav-link" href="#">Home</a>
-                            <a class="nav-item nav-link" href="./pages/about.html">About</a>
-                            <a class="nav-item nav-link" href="./pages/videos.html">Videos</a>
-                            <a class="nav-item nav-link" href="./pages/program.html">Program</a>
-                            <a class="nav-item nav-link" href="./pages/scotty.html">About Scotty</a>
+                            <a class="nav-item nav-link" href="#top">Home</a>
+                            <a class="nav-item nav-link" href="/pages/about.html">About</a>
+                            <a class="nav-item nav-link" href="/pages/videos.html">Videos</a>
+                            <a class="nav-item nav-link" href="/pages/program.html">Program</a>
+                            <a class="nav-item nav-link" href="/pages/scotty.html">About Scotty</a>
                         </div>
                     </div>
                 </div>
@@ -45,7 +44,7 @@
     <hr class="hr1">
     <div class="mainGrid">
         <div class="indexImagen container-fluid">
-            <img class="scottyImg img-fluid" src="./images/ScottyWest.png" alt="ScottyWest">
+            <img class="scottyImg img-fluid" src="/images/ScottyWest.png" alt="ScottyWest">
         </div>    
         <div class="titleContainer container-fluid" data-aos="zoom-in">
             <p class="title">WELCOME TO THE BEST GUITAR LESSONS PROGRAM!</p>
