--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                     <div class="container-fluid">
                         <div class="navbar-nav d-flex flex-row justify-content-center gap-5 p-2 m-2">
                             <a class="nav-item nav-link" href="#top">Home</a>
-                            <a class="nav-item nav-link" href="/pages/about.html">About</a>
-                            <a class="nav-item nav-link" href="/pages/videos.html">Videos</a>
-                            <a class="nav-item nav-link" href="/pages/program.html">Program</a>
-                            <a class="nav-item nav-link" href="/pages/scotty.html">About Scotty</a>
+                            <a class="nav-item nav-link" href="../pages/about.html">About</a>
+                            <a class="nav-item nav-link" href="../pages/videos.html">Videos</a>
+                            <a class="nav-item nav-link" href="../pages/program.html">Program</a>
+                            <a class="nav-item nav-link" href="../pages/scotty.html">About Scotty</a>
                         </div>
                     </div>
                 </div>
@@ -44,7 +44,7 @@
     <hr class="hr1">
     <div class="mainGrid">
         <div class="indexImagen container-fluid">
-            <img class="scottyImg img-fluid" src="/images/ScottyWest.png" alt="ScottyWest">
+            <img class="scottyImg img-fluid" src="../images/ScottyWest.png" alt="ScottyWest">
         </div>    
         <div class="titleContainer container-fluid" data-aos="zoom-in">
             <p class="title">WELCOME TO THE BEST GUITAR LESSONS PROGRAM!</p>
