--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                     <div class="container-fluid">
                         <div class="navbar-nav d-flex flex-row justify-content-center gap-5 p-2 m-2">
                             <a class="nav-item nav-link" href="#top">Home</a>
-                            <a class="nav-item nav-link" href="../pages/about.html">About</a>
-                            <a class="nav-item nav-link" href="../pages/videos.html">Videos</a>
-                            <a class="nav-item nav-link" href="../pages/program.html">Program</a>
-                            <a class="nav-item nav-link" href="../pages/scotty.html">About Scotty</a>
+                            <a class="nav-item nav-link" href="/pages/about.html">About</a>
+                            <a class="nav-item nav-link" href="/pages/videos.html">Videos</a>
+                            <a class="nav-item nav-link" href="/pages/program.html">Program</a>
+                            <a class="nav-item nav-link" href="/pages/scotty.html">About Scotty</a>
                         </div>
                     </div>
                 </div>
@@ -43,14 +43,14 @@
     </header>
     <hr class="hr1">
     <div class="mainGrid">
-        <div class="indexImagen container-fluid">
+        <div class="indexImagen container-fluid" data-aos="zoom-in" data-aos-duration="1000">
             <img class="scottyImg img-fluid" src="../images/ScottyWest.png" alt="ScottyWest">
         </div>    
-        <div class="titleContainer container-fluid" data-aos="zoom-in">
+        <div class="titleContainer container-fluid" data-aos="zoom-in" data-aos-duration="1000">
             <p class="title">WELCOME TO THE BEST GUITAR LESSONS PROGRAM!</p>
         </div>
         <div class="indexTexto1 container-fluid">
-            <div class="textContainer container-fluid" data-aos="fade-up">
+            <div class="textContainer container-fluid" data-aos="zoom-in" data-aos-duration="1000">
                 <p>
                     "Greetings, fellow guitar enthusiasts! I'm Scotty West. Thanks for your interest in our lessons. These 32 hour-long instruction videos contain all you need to know to truly understand your instrument from the inside-out."
                 </p>
@@ -62,18 +62,18 @@
     </div>
     <hr class="hr2">
     <div class="indexTexto2 container-fluid">
-        <p data-aos="fade-up">
+        <p data-aos="fade-up" data-aos-duration="1500">
             There are thousands of guitar lessons out there that will show you how to place your fingers to play specific songs. You may find this fun for awhile but it's not likely to keep you satisfied for the long haul. My <span class="fw-bold">"music as language"</span> approach to guitar lessons will allow you to easily answer questions many of you have had for years and get you on the true path to creative fulfillment.
         </p>
         <hr>
-        <p data-aos="fade-up">
+        <p data-aos="fade-up" data-aos-duration="1500">
             Some guitar lessons have you jumping around sampling this-and-that so you end up with a scattered vision of how music works. Our video guitar lessons are different. They're designed to be viewed in order so each concept flows into the next. You could learn how to play guitar as well as or even better than your favorite guitar heroes. You'll finally be able to actually "think" on your instrument ... learn songs by ear ... write your own music ... solo with power and passion. It's easy if you get it explained to you in the right way.
         </p>
-        <p data-aos="fade-up">
+        <p data-aos="fade-up" data-aos-duration="1500">
             These guitar lesson videos provide a solid foundation in music theory, ear training and guitar technique all totally integrated and profoundly well organized. 
         </p>
         <hr>
-        <p data-aos="fade-up">
+        <p data-aos="fade-up" data-aos-duration="1500">
             <span class="text-warning fw-bold">WATCH SCOTTY'S FREE VIDEO GUITAR LESSONS - YOU'LL BE AMAZED AT HOW MUCH YOU WILL LEARN!</span>
 
             You can reach Scotty's main webpage at: <a href="https://www.absolutelyunderstandguitar.com">https://www.absolutelyunderstandguitar.com</a>.
