--- a/pages/program.html
+++ b/pages/program.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="encabezado">
+    <header class="header">
         <div class="headerImage">
             <img src="https://www.absolutelyunderstandguitar.com/templates/aug_dual_sidebar_2016_v3/images/header.png" alt="headerImage">
         </div>
@@ -40,22 +40,29 @@
             </nav>
         </div>
     </header>
-    <div class="programImage">
+    <hr class="hr1">
+    <div class="programImage" data-aos="zoom-in" data-aos-duration="1500">
         <img src="../images/program.jpg" alt="Program Image">
     </div>
-    <div class="programText p-3">
-        <p>
-            Scotty's famous <span class="text-warning">color-coded guitar scale and chord fingering charts</span> are much better than those old black and white finger charts. They tell you much more than just where to position your fingers. They show you how each note functions in the scale or chord it is in, and how it works with other scales and chords in a song. This is critical for lead guitarists and folks interested in song writing and improvising.
+    <hr class="hr2">
+    <div class="programText">
+        <p data-aos="fade-up" data-aos-duration="1500">
+            Scotty's famous <span>color-coded guitar scale and chord fingering charts</span> are much better than those old black and white finger charts. They tell you much more than just where to position your fingers. They show you how each note functions in the scale or chord it is in, and how it works with other scales and chords in a song. This is critical for lead guitarists and folks interested in song writing and improvising.
         </p>
-        <p>
+        <hr>
+        <p data-aos="fade-up" data-aos-duration="1500">
             The official course handbook complements and reenforces the video guitar lessons making memorization and review of material a snap. All the guitar finger charts and graphics that Scotty shows you in the DVD guitar lessons are reprinted in your book so you can study them up close while viewing the video guitar lessons on your TV or PC. Created by a professional graphic artist, these charts and illustrations are simple to read and understand.
         </p>
-        <p>
-            This program will be focusing on the <span class="text-warning">6 Main Areas of Music</span>: Pitch, Rhythm, Timbre, Dynamics, Technique, and Notation. If you aspire to be a true musician and satisfy yourself with your playing, you need to master all the 6 areas! Here is a chart further explaining the concepts:
+        <hr>
+        <p data-aos="fade-up" data-aos-duration="1500">
+            This program will be focusing on the <span>6 Main Areas of Music</span>: Pitch, Rhythm, Timbre, Dynamics, Technique, and Notation. If you aspire to be a true musician and satisfy yourself with your playing, you need to master all the 6 areas! Here is a chart further explaining the concepts:
         </p>
     </div>
-    <table class="table table-striped table-dark custom-table caption-top">
-        <caption class="text-light">6 Main Areas of Music</caption>
+    <hr class="hr3">
+    <div class="tableTitle" data-aos="zoom-in" data-aos-duration="1000">
+        <p>The 6 Main Areas of Music</p>
+    </div>
+    <table class="table table-bordered" data-aos="zoom-in" data-aos-duration="1000">
         <tbody>
             <tr>
                 <th scope="row">Pitch</th>
@@ -89,6 +96,7 @@
             </tr>
         </tbody>        
     </table>
+    <hr class="hr4">
     <div class="footer">
         <footer>
             <a href="#top">Go To Top</a>
