--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                         <div class="navbar-nav d-flex flex-row justify-content-center gap-5 p-2 m-2">
                             <a class="nav-item nav-link" href="#top">Home</a>
                             <a class="nav-item nav-link" href="/pages/about.html">About</a>
-                            <a class="nav-item nav-link" href="/pages/videos.html">Videos</a>
-                            <a class="nav-item nav-link" href="/pages/program.html">Program</a>
+                            <a class="nav-item nav-link" href="./pages/videos.html">Videos</a>
+                            <a class="nav-item nav-link" href="../pages/program.html">Program</a>
                             <a class="nav-item nav-link" href="/pages/scotty.html">About Scotty</a>
                         </div>
                     </div>
