Finishing up on Ver3.-

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <hr class="hr1">
     <div class="mainGrid">
         <div class="indexImagen container-fluid" data-aos="zoom-in" data-aos-duration="1000">
-            <img class="scottyImg img-fluid" src="../images/ScottyWest.png" alt="ScottyWest">
-        </div>    
+            <img class="scottyImg img-fluid" src="./images/indexScotty.png" alt="ScottyWest">
+        </div>
         <div class="titleContainer container-fluid" data-aos="zoom-in" data-aos-duration="1000">
             <p class="title">WELCOME TO THE BEST GUITAR LESSONS PROGRAM!</p>
         </div>
