--- a/pages/scotty.html
+++ b/pages/scotty.html
@@ -15,12 +15,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="encabezado">
+    <header class="header">
         <div class="headerImage">
             <img src="https://www.absolutelyunderstandguitar.com/templates/aug_dual_sidebar_2016_v3/images/header.png" alt="headerImage">
         </div>
-        <h1 class="display-2">Absolutely Understand Guitar</h1>
-        <h2 class="display-6 text-light text-center"><em>A Fan Tribute Page</em></h2>
+        <h1>Absolutely Understand Guitar</h1>
+        <h2>A Fan Tribute Page</h2>
         <div class="naviBar">
             <nav class="navbar navbar-expand-lg">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,20 +40,23 @@
             </nav>
         </div>
     </header>
-    <!--/absolutelyUnderstandGuitar/images/scotty1.jpg-->
+    <hr class="hr1">
     <div class="scottyI1">
         <img src="../images/scotty1.jpg" alt="First Picture of Scotty">
     </div>
-    <div class="scottyT1 fst-italic">
+    <hr class="hr2">
+    <div class="scottyT1">
         <p>
             "I never really set out to be a music teacher. My mother, a symphony violinist, started me with piano lessons when I was 6 years old. I began to learn to play the guitar in 1964 when I was 10. The Beatles had just arrived in America and I just had to learn to play the guitar. From the beginning, I was the kid who had to know. My piano lessons had shown me that there was a system to the way music worked and I knew that if I wanted to learn to play guitar, I would have to understand that system. I wanted to write my own songs ... play by ear ... jam and improvise like the Beatles ... but neither my private teachers or the public school music programs taught that stuff.
         </p>
     </div>
-    <div class="scottyT2 fst-italic">
+    <hr class="hr3">
+    <div class="scottyT2">
         <p>
             I tried to learn to play guitar myself. My friends would show me some chords and scales. The books I would try to read were often scattered and confusing. My music instructors didn't seem to know the answers. It's difficult to learn to play the guitar if there's no program to follow. Even so, everyone thought I was this hot guitar player. I could play the popular songs of the day ... Hendrix, Dylan, The Beatles etc. Everyone thought I was this hot-shot guitar player but I knew I was only faking it. I didn't have <span class="text-warning fw-bold">"The BIG Picture"</span>.
         </p>
     </div>
+    <hr class="hr4">
     <div id="carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000">
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -78,7 +81,8 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-    <div class="scottyT3 fst-italic">
+    <hr class="hr5">
+    <div class="scottyT3">
         <p>
             Then one summer, my luck changed. A new roommate named <span class="fw-semibold">Dan May</span> moved in with us. Dan was one of those true musical prodigies you hear about ... played the piano before he could walk ... masters degree in music composition at age 22 ... totally knowledgeable about guitar music theory and good at explaining it clearly and logically. Dan understood music inside out. He actually knew the answers to all the questions that I had been asking all those years. I would slap myself on the forehead and ask "Why didn't my other music teachers show me this stuff when I was a kid? "Dan showed me that learning to play the guitar is easy if you can find someone to explain it to you the right way.
             <p>
@@ -86,10 +90,7 @@
             </p>
         </p>
     </div>
-    <!--
-    <div class="scottyI2">
-        <img src="/absolutelyUnderstandGuitar/images/scotty2.jpg" alt="Second Picture of Scotty">
-    </div>-->
+    <hr class="hr6">
     <footer class="footer">
         <a href="#top">Go To Top</a>
     </footer>
