--- a/pages/videos.html
+++ b/pages/videos.html
@@ -15,12 +15,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="encabezado">
+    <header class="header">
         <div class="headerImage">
             <img src="https://www.absolutelyunderstandguitar.com/templates/aug_dual_sidebar_2016_v3/images/header.png" alt="headerImage">
         </div>
-        <h1 class="display-2">Absolutely Understand Guitar</h1>
-        <h2 class="display-6 text-light text-center"><em>A Fan Tribute Page</em></h2>
+        <h1>Absolutely Understand Guitar</h1>
+        <h2>A Fan Tribute Page</h2>
         <div class="naviBar">
             <nav class="navbar navbar-expand-lg">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,8 +40,9 @@
             </nav>
         </div>
     </header>
+    <hr class="hr1">
     <div class="videoT1">
-        <p class="h2 text-warning fw-bold">
+        <p class="h2">
             The Absolutely Understand Guitar Video Series
         </p>
     </div>
@@ -54,8 +55,9 @@
             allowfullscreen>
         </iframe>
     </div>
+    <hr class="hr2">
     <div class="videoT2">
-        <p class="h2 text-warning">
+        <p class="h2">
             The Ear Training Series
         </p>
     </div>
@@ -68,8 +70,9 @@
             allowfullscreen>
         </iframe>
     </div>
+    <hr class="hr3">
     <div class="videoT3">
-        <p class="h2 text-warning">
+        <p class="h2">
             Some of Scotty's playing with <span class="fst-italic">The Experimental Ensemble of Cape Cod</span>! 
         </p>
     </div>
@@ -82,6 +85,7 @@
                 allowfullscreen>
         </iframe>
     </div>
+    <hr class="hr4">
     <footer class="footer">
         <a href="#top">Go To Top</a>
     </footer>
